force-app/main/default/objects/Password_Reset_Request__c/Password_Reset_Request__c.object-meta.xml
<CustomObject>
    <label>Password Reset Request</label>
    <nameField>
        <displayFormat>PRR-{0000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Password Reset Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>