force-app/main/default/objects/Password_Reset_Request__c/fields/Department_Name__c.field-meta.xml
<CustomField>
    <fullName>Department_Name__c</fullName>
    <label>Department Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>