force-app/main/default/objects/Password_Reset_Request__c/fields/New_Password__c.field-meta.xml
<CustomField>
    <fullName>New_Password__c</fullName>
    <label>New Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>