force-app/main/default/objects/Password_Reset_Request__c/fields/New_Username__c.field-meta.xml
<CustomField>
    <fullName>New_Username__c</fullName>
    <label>New Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>